--- a/QUEST/.classpath
+++ b/QUEST/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/mysql-connector-java-5.1.41/mysql-connector-java-5.1.41-bin.jar"/>
+	<classpathentry kind="lib" path="lib/weblaf-1.29.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
