--- a/QUEST/.classpath
+++ b/QUEST/.classpath
@@ -2,9 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="imgsrc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/User/Documents/GitHub/QUEST/QUEST/weblaf-complete-1.28.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Amagi/Documents/git/QUEST/QUEST/resources/pdec.jar"/>
-	<classpathentry kind="lib" path="C:/Users/User/Documents/GitHub/QUEST/QUEST/mysql-connector-java-5.1.41-bin.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ramon/Documents/GitHub/QUEST/QUEST/weblaf-complete-1.28.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ramon/Documents/GitHub/QUEST/QUEST/pdec.jar"/>
+	<classpathentry kind="lib" path="C:/mysql-connector-java-5.1.41/mysql-connector-java-5.1.41-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
